# detection-model-training

./: .gitignore  README.md  pyproject.toml
artifacts/registry/datasets/: index.yaml
artifacts/registry/datasets/self-build-v3/: dsv-20260325T045541Z-v3.yaml
configs/datasets/: example-detect.yaml  self-build-v3--dsv-20260325T045541Z-v3.yaml
configs/quant/: yolo26n-int8-qat.yaml
configs/runs/: picodet-s-sample.yaml  yolo11n-sample.yaml  yolo26n-sample.yaml
configs/vast/profiles/: default-docker-detect.yaml
docker/: Dockerfile.train
docs/: architecture.md  picodet-workflow.md  pruning-experiments.md  quantization-workflow.md  ubuntu-bootstrap.md  vast-oss-strategy.md
scripts/: bootstrap_ubuntu.sh  check_training_env.sh
src/yoloctl/: __init__.py  advisory.py  cli.py  config.py  cost.py  datasets.py  exceptions.py  manifests.py  models.py  oss.py  paddledet_dataset.py  paddledet_runner.py  paths.py  qat.py  quantization.py  review.py  review_app.py  ultralytics_runner.py  vast.py  yamlio.py
src/yoloctl/review_static/: app.js  styles.css
src/yoloctl/review_templates/: review.html
tests/: test_advisory.py  test_cli.py  test_datasets.py  test_models.py  test_oss.py  test_paddledet.py  test_quantization.py  test_review.py  test_vast.py
